- The .TH tag for the dhcp-options manpage was typo repaired   thanks to a report from jidanni and the Debian package maintenance   team.  [ISC-Bugs #21676] {Debian Bug#563613}

--- a/doc/ja_JP.eucJP/dhcp-options.5
+++ b/doc/ja_JP.eucJP/dhcp-options.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhcp-options.5,v 1.4 2009/11/24 02:06:56 sar Exp $
+.\"	$Id: dhcp-options.5,v 1.5 2010/07/20 21:09:14 dhankins Exp $
 .\"
 .\" Copyright (c) 2004,2009 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -36,7 +36,7 @@
 .\" WORD: Router Solicitation   ルータ要請
 .\" WORD: Mask Discovery	マスク探索
 .\"
-.TH dhcpd-options 5
+.TH dhcp-options 5
 .SH 名称
 dhcp-options - 動的ホスト構成プロトコルのオプション
 .SH 解説
