--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		             Version 4.1.2
-			    25 October 2010
+		             Version 4.1-ESV
+			     6 December 2010
 
 			      README FILE
 
@@ -94,8 +94,13 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1.2, a maintenance release which fixes bugs
-present in ISC DHCP 4.1.1 or prior.
+This is ISC DHCP 4.1-ESV, an extended support (ESV) release that seeks
+only to fix bugs present in ISC DHCP 4.1.2 or prior, and provides no
+new features.  ESVs are intended for users who have longer upgrade
+constraints and only critical bug and security fixes will be added to
+future ESV releases.  Please see our web page
+http://www.isc.org/downloads/extended-support for more information on
+ESVs
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -131,12 +136,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1.2.tar.gz
-	tar xvf dhcp-4.1.2.tar
+	gunzip dhcp-4.1-ESV.tar.gz
+	tar xvf dhcp-4.1-ESV.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1.2 subdirectory that you've just created and
+Now, cd to the dhcp-4.1-ESV subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
