--- a/doc/ja_JP.eucJP/dhcp-options.5
+++ b/doc/ja_JP.eucJP/dhcp-options.5
@@ -1,6 +1,7 @@
-.\"	$Id: dhcp-options.5,v 1.3.24.2 2010/07/13 20:56:56 dhankins Exp $
+.\"	$Id: dhcp-options.5,v 1.3.24.3 2011/01/20 23:46:46 sar Exp $
 .\"
-.\" Copyright (c) 2004,2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
