--- a/client/dhclient.leases.5
+++ b/client/dhclient.leases.5
@@ -1,6 +1,6 @@
-.\"	$Id: dhclient.leases.5,v 1.7 2010/07/02 23:09:14 sar Exp $
+.\"	$Id: dhclient.leases.5,v 1.8 2011/02/23 23:50:55 sar Exp $
 .\"
-.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2011 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1997-2003 by Internet Software Consortium
 .\"
@@ -28,7 +28,7 @@
 .\" Support and other services are available for ISC products - see
 .\" https://www.isc.org for more information or to learn more about ISC.
 .\"
-.\" $Id: dhclient.leases.5,v 1.7 2010/07/02 23:09:14 sar Exp $
+.\" $Id: dhclient.leases.5,v 1.8 2011/02/23 23:50:55 sar Exp $
 .\"
 .TH dhclient.leases 5
 .SH NAME
@@ -39,7 +39,7 @@ database of leases that it has acquired that are still valid.   The
 database is a free-form ASCII file containing one valid declaration
 per lease.   If more than one declaration appears for a given lease,
 the last one in the file is used.   The file is written as a log, so
-this is not an unusual occurrance.
+this is not an unusual occurrence.
 .PP
 The format of the lease declarations is described in
 .B dhclient.conf(5).
