Update version, dates, copyrights for 3.1-ESV-R1

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 3.1-ESV
-			     March 17, 2010
+			   Version 3.1-ESV-R1
+			     March 25, 2011
 
 			      README FILE
 
@@ -92,8 +92,8 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 3.1-ESV, an extended support (ESV) release that seeks
-only to fix bugs present in ISC DHCP 3.1.3 or prior, and provides no
+This is ISC DHCP 3.1-ESV-R1, an extended support (ESV) release that seeks
+only to fix bugs present in ISC DHCP 3.1.3-ESV or prior, and provides no
 new features.  ESVs are intended for users who have longer upgrade
 constraints and only critical bug and security fixes will be added to
 future ESV releases.  Please see our web page
@@ -141,12 +141,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-3.1-ESV.tar.gz
-	tar xvf dhcp-3.1-ESV.tar
+	gunzip dhcp-3.1-ESV-R1.tar.gz
+	tar xvf dhcp-3.1-ESV-R1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-3.1-ESV subdirectory that you've just created and
+Now, cd to the dhcp-3.1-ESV-R1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
