--- a/server/dhcpd.8
+++ b/server/dhcpd.8
@@ -1,6 +1,6 @@
 .\"	dhcpd.8
 .\"
-.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2011 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004-2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
@@ -28,7 +28,7 @@
 .\" Support and other services are available for ISC products - see
 .\" https://www.isc.org for more information or to learn more about ISC.
 .\"
-.\" $Id: dhcpd.8,v 1.33 2010/07/14 20:01:14 sar Exp $
+.\" $Id: dhcpd.8,v 1.34 2011/04/15 21:58:12 sar Exp $
 .\"
 .TH dhcpd 8
 .SH NAME
@@ -73,6 +73,9 @@ dhcpd - Dynamic Host Configuration Protocol Server
 [
 .B -pf
 .I pid-file
+]
+[
+.B --no-pid
 ]
 [
 .B -tf
@@ -283,6 +286,11 @@ Path to alternate lease file.
 .TP
 .BI \-pf \ pid-file
 Path to alternate pid file.
+.TP
+.BI \--no-pid
+Option to disable writing pid files.  By default the program
+will write a pid file.  If the program is invoked with this
+option it will not check for an existing server process.
 .PP
 .SH CONFIGURATION
 The syntax of the dhcpd.conf(5) file is discussed separately.   This
