--- a/relay/dhcrelay.8
+++ b/relay/dhcrelay.8
@@ -1,6 +1,6 @@
 .\"	dhcrelay.8
 .\"
-.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2011 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1997-2003 by Internet Software Consortium
 .\"
@@ -28,7 +28,7 @@
 .\" Support and other services are available for ISC products - see
 .\" https://www.isc.org for more information or to learn more about ISC.
 .\"
-.\" $Id: dhcrelay.8,v 1.15.38.3 2010/07/02 23:37:07 sar Exp $
+.\" $Id: dhcrelay.8,v 1.15.38.3.6.1 2011/04/15 22:26:21 sar Exp $
 .\"
 .TH dhcrelay 8
 .SH NAME
@@ -52,6 +52,13 @@ dhcrelay - Dynamic Host Configuration Protocol Relay Agent
 [
 .B -A
 .I length
+]
+[
+.B -pf
+.I pid-file
+]
+[
+.B --no-pid
 ]
 [
 .B -m
@@ -88,6 +95,13 @@ dhcrelay - Dynamic Host Configuration Protocol Relay Agent
 [
 .B -c
 .I count
+]
+[
+.B -pf
+.I pid-file
+]
+[
+.B --no-pid
 ]
 .B -l
 .I lower0
@@ -150,6 +164,13 @@ purposes.  Default is port 67 for DHCPv4/BOOTP, or port 547 for DHCPv6.
 -q
 Quiet mode.  Prevents dhcrelay6 from printing its network configuration
 on startup.
+.TP
+-pf pid-file
+Path to alternate pid file.
+.TP
+--no-pid
+Option to disable writing pid files.  By default the program
+will write a pid file.
 .PP
 \fIOptions available in DHCPv4 mode only:\fR
 .TP
